add user index view

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,14 @@
+<%= stylesheet_link_tag "userIndex.css" %>
 <h1>Users Index</h1>
+
+<ul>
+  <% @users.each do |user| %>
+    <li class="user_con">
+      <%= image_tag (user.photo), class: "user_img" %>
+      <div class="user_data_con">
+        <h1><%= user.name %></h1>
+        <p class="posts_number">Number of posts: <%= user.posts_counter %></p>
+      </div>
+      </li>
+  <% end %>
+</ul>
