Add: Form styling

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -53,3 +53,13 @@ a {
   padding: 10px;
   border: 1px solid black;
 }
+
+.field {
+  border: 1px solid black;
+  padding: 1%;
+  width: 100%;
+}
+
+form {
+  display: flex;
+}
