--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <% if user_signed_in? %>
-     <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+     <%= button_to "Sign out", destroy_user_session_path, :method => :delete %>
     <% end %>
     <% flash.each do |type, msg| %> <div> <%= msg %> </div> <% end %> 
     <%= yield %>
