--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -54,12 +54,8 @@ a {
   border: 1px solid black;
 }
 
-.field {
-  border: 1px solid black;
-  padding: 1%;
-  width: 100%;
-}
 
-form {
-  display: flex;
+.new_user {
+  width: 100%;
+  text-align: center;
 }
