Add conditional render based on user role

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,18 +9,24 @@
       <%= form_with url: "/users/#{@post.author.id}/posts/#{@post.id}/likes" do |form| %>
         <%= form.submit "Like", class: "submit-btn" %>
       <% end %>
-      <%= link_to "Delete", user_post_path(@post.author.id, @post), data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %>
+      <%# Delet button for posts %>
+      <% if can? :destroy , @post.author.id %>
+        <%= link_to "Delete", user_post_path(@post.author.id, @post), data: {
+                      turbo_method: :delete,
+                      turbo_confirm: "Are you sure?"
+                    } %>
+      <% end %>
     <h2>Comments</h2>
     <ul>
       <% @post.comments.each do |comment| %>
         <li><%= comment.author.name %> : <%= comment.text %></li>
-        <%= link_to "Delete", user_post_comment_path(@post.author.id, @post, comment), data: {
+        <%# Delete button for comments %>
+        <% if can? :destroy , @post.author.id %>
+          <%= link_to "Delete", user_post_comment_path(@post.author.id, @post, comment), data: {
                     turbo_method: :delete,
                     turbo_confirm: "Are you sure?"
                   } %>
+        <% end %>
       <% end %>
     </ul>
   </div>
